--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xterm/xterm": "^5.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
