--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "build": "tsc -b && vite build",
-    "dev": "vite",
-    "preview": "vite preview"
+    "watch": "vite --host",
+    "dev": "vite preview"
   },
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
