--- a/server/nginx.conf.template
+++ b/server/nginx.conf.template
@@ -14,7 +14,7 @@ server {
     try_files $uri $uri/ /index.html;
 
     # Security headers
-    add_header "Content-Security-Policy" "default-src 'self'; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action: 'self'; frame-ancestors 'self';" always;
+    add_header "Content-Security-Policy" "default-src 'self'; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'self'; frame-ancestors 'self';" always;
     add_header "X-Content-Type-Options" "nosniff" always;
     add_header "Referrer-Policy" "strict-origin-when-cross-origin" always;
     add_header "Cross-Origin-Opener-Policy" "same-origin" always;
