--- a/package.json
+++ b/package.json
@@ -13,14 +13,6 @@
   "license": "MIT",
   "author": "Emrecan Karaçayır",
   "type": "module",
-  "scripts": {
-    "clean": "rm -rf out",
-    "format": "prettier --write .",
-    "lint": "eslint .",
-    "build": "tsc -b && vite build",
-    "watch": "vite --host",
-    "dev": "vite preview"
-  },
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
@@ -42,5 +34,14 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
+  },
+  "scripts": {
+    "clean": "rm -rf out",
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "build": "tsc -b && vite build",
+    "test": "echo \"[🔵]: No tests defined.\"",
+    "watch": "vite --host",
+    "dev": "vite preview"
   }
 }
