Added: environment and version info

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 APP_PORT= # Port for the web client
+APP_ENV= # Environment of the web client (unset in local)
+APP_VER= # Version of the web client (unset in local)
 
 API_HOST= # Host for the gateway API
 API_PORT= # Port for the gateway API
