Finished: build arguments for version and environment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+# >-----< BUILD ARGUMENTS >-----< #
+
+PUBLIC_APP_ENV= # Environment of the web client (unset in local)
+PUBLIC_APP_VER= # Version of the web client (unset in local)
+
+# >-----< RUNTIME VARIABLES >-----< #
+
 APP_PORT= # Port for the web client
-APP_ENV= # Environment of the web client (unset in local)
-APP_VER= # Version of the web client (unset in local)
 
 API_HOST= # Host for the gateway API
 API_PORT= # Port for the gateway API
